--- a/src/main/resources/fxml/rootView.fxml
+++ b/src/main/resources/fxml/rootView.fxml
@@ -1,20 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import dad.calendario.customcomponent.MonthCalendar?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23">
+<GridPane fx:id="root" hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" vgap="10.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+    <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
+   <children>
+      <MonthCalendar fx:id="eneroCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.rowIndex="1" />
+      <MonthCalendar fx:id="febreroCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <MonthCalendar fx:id="marzoCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="3" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+      <MonthCalendar fx:id="abrilCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="4" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+      <MonthCalendar fx:id="mayoCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="5" GridPane.rowIndex="2" />
+      <MonthCalendar fx:id="junioCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="6" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <MonthCalendar fx:id="julioCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="7" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+      <MonthCalendar fx:id="agostoCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="8" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+      <MonthCalendar fx:id="septiembreCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="9" GridPane.rowIndex="3" />
+      <MonthCalendar fx:id="octubreCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="10" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <MonthCalendar fx:id="noviembreCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="11" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+      <MonthCalendar fx:id="diciembreCalendar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" month="12" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+      <Button mnemonicParsing="false" onAction="#onDecreaseYearAction" text="&lt;" GridPane.halignment="CENTER" />
+      <Button mnemonicParsing="false" onAction="#onIncreaseYearAction" text="&gt;" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
+      <Label fx:id="yearLabel" alignment="CENTER" contentDisplay="CENTER" text="Label" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+   </children>
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
 </GridPane>
